<resources>
    <string name="app_name">My_Mechanic_App</string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="address">Enter Your Address</string>
    <string name="register">Register Now</string>
    <string name="signin">I am already sign in..!</string>
    <string name="goback">Go Back..!</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="forgetbtn">Forget Password ?</string>
    <string name="sendlink">Send Password Reset Email</string>
    <string name="loginbtn">Login</string>

    <string name="title_activity_client_dashboard">client_dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_client_map">Map</string>

    <string name="login_type_user">User Account</string>

    <string name="login_type_mechanic">Service Provider</string>


    <string name="mechanic_login_title">Service Provider Login</string>
    <string name="login_password_show">Show my password..!!</string>

    <string name="forget_title">Password Reset</string>
    <string name="login_password_hint"></string>

    <string-array name="Post_type">
        <item>Brand New</item>
        <item>Re-Condition</item>
    </string-array>
    <string-array name="satify_typr">
        <item>-Select Answer-</item>
        <item>Positive</item>
        <item>Neutral</item>
        <item>Negative</item>
    </string-array>

</resources>
