<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".views.mechanic_login_dash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo"
                android:layout_marginTop="50dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Service Provider Login"
                android:layout_marginLeft="35dp"
                android:textColor="@color/round_button_text"
                android:layout_gravity="bottom"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <EditText
            android:id="@+id/et_serviceemail_login"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_height="50dp"
            android:background="@drawable/text_view_design"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_servicepassword_login"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_height="50dp"
            android:background="@drawable/text_view_design"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/cb_service_show_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show my password..!!"
                android:buttonTint="@color/button_colour"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_wrong_service_details"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/wrong_message"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_login_service"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/loginbtn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_goforget_service_login"
                    android:gravity="left|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobackgroundbtn"
                    android:text="@string/forgetbtn"
                    android:clickable="true"
                    android:textColor="@color/black_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_gosignin_service_login"
                    android:gravity="right|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobackgroundbtn"
                    android:text="Sign up Now !"
                    android:clickable="true"
                    android:textColor="@color/black_text" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>