<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".views.forget_password_provider_dash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/main_logo3"
                    android:paddingTop="60dp"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="Password Reset"
                    android:layout_marginLeft="35dp"
                    android:textColor="@color/black_text"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_resetmail_provider_forget"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_height="50dp"
                android:background="@drawable/text_view_design"
                android:hint="@string/email"/>

            <TextView
                android:id="@+id/tv_wrong_forget"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wrong_message"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_resetsend_provider_forget"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_shape"
                android:text="@string/sendlink"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_goback_provider_forget"
                    android:gravity="center_horizontal|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobackgroundbtn"
                    android:text="@string/goback"
                    android:textColor="@color/black_text" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>