<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".views.client_signup_dash">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:paddingTop="20dp"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Sign Up User"
                android:fontFamily="@font/calistoga_regular"
                android:textColor="@color/black_text"/>

            <ImageView
                android:id="@+id/img_profilepic_signup"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/user_add_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_fname_client_signup"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:hint="@string/fname"
                    android:fontFamily="@font/philosopher_regular"
                    android:singleLine="true"
                    android:background="@drawable/text_view_design"/>

                <EditText
                    android:id="@+id/et_lname_client_signup"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="@string/lname"
                    android:fontFamily="@font/philosopher_regular"
                    android:singleLine="true"
                    android:background="@drawable/text_view_design"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_nic_client_signup"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/text_view_design"
                    android:layout_marginRight="5dp"
                    android:singleLine="true"
                    android:fontFamily="@font/philosopher_regular"
                    android:hint="Your Nic Number"/>

                <EditText
                    android:id="@+id/et_dob_client_signup"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text"
                    android:singleLine="true"
                    android:fontFamily="@font/philosopher_regular"
                    android:background="@drawable/text_view_design"
                    android:hint="YYYY/MM/DD"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textSize="15dp"
                    android:fontFamily="@font/baloobhai2_semibold"
                    android:textColor="@color/black_text"
                    android:paddingRight="20dp"/>

                <RadioGroup
                    android:id="@+id/radio_gender_client_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_sexmale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:buttonTint="@color/button_colour"
                        android:text="Male"
                        android:textSize="14dp"
                        android:fontFamily="@font/amaranth_italic"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_sexfemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/amaranth_italic"
                        android:textSize="14dp"
                        android:buttonTint="@color/button_colour"
                        android:text="Female"/>
                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/et_address_client_signup"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_view_design"
                android:hint="@string/address"
                android:fontFamily="@font/philosopher_regular"
                android:gravity="top|left"
                android:maxLines="6"
                android:layout_gravity="top|left"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_city_client_signup"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/text_view_design"
                    android:hint="City"
                    android:fontFamily="@font/philosopher_regular"
                    android:singleLine="true"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/et_contact_client_signup"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:fontFamily="@font/philosopher_regular"
                    android:background="@drawable/text_view_design"
                    android:hint="Contact Number"
                    android:layout_marginLeft="5dp"/>


            </LinearLayout>

            <EditText
                android:id="@+id/et_email_client_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:singleLine="true"
                android:fontFamily="@font/philosopher_regular"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_view_design"
                android:hint="Your Email"/>

            <EditText
                android:id="@+id/et_password_client_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:fontFamily="@font/philosopher_regular"
                android:background="@drawable/text_view_design"
                android:hint="Your Password"/>

            <EditText
                android:id="@+id/et_repassword_client_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:fontFamily="@font/philosopher_regular"
                android:background="@drawable/text_view_design"
                android:hint="Again Password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/cb_show_password_client_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show my password..!!"
                    android:textSize="16dp"
                    android:fontFamily="@font/amaranth_italic"
                    android:buttonTint="@color/button_colour"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_wrong_client_signup"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wrong_message"
                android:textAlignment="center"
                android:textSize="16dp"
                android:fontFamily="@font/philosopher_regular"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_registernow_client_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:fontFamily="@font/headlandone_regular"
                android:background="@drawable/button_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_alredysign_client_signup"
                android:gravity="center_horizontal|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nobackgroundbtn"
                android:text="@string/signin"
                android:fontFamily="@font/exo_semibold"
                android:textColor="@color/black_text" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>